--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,21 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    restart: always
     volumes:
       - ./src:/var/www/html
-    ports:
-      - "8000:8000"
     depends_on:
       - mysql
+
+  nginx:
+    image: nginx:alpine
+    restart: always
+    ports:
+      - "8000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./src:/var/www/html
+    depends_on:
+      - app
 
   mysql:
     image: mysql:9.4.0
